# x25519-chacha20poly1305

./: .gitignore  Cargo.toml  Makefile  README.md  package-lock.json
.github/workflows/: jstest.yml  test.yml
example/: Makefile  ci-test.sh  index.html  package.json  server.sh  test.ts
pkg/: README.md  package.json  x25519_chacha20poly1305.d.ts  x25519_chacha20poly1305.js  x25519_chacha20poly1305_bg.wasm  x25519_chacha20poly1305_bg.wasm.d.ts  x25519_chacha20poly1305_wasm.js  x25519_chacha20poly1305_wasm_bg.wasm
pkg/bundler/: package.json  x25519-chacha20poly1305-bundler.d.ts  x25519-chacha20poly1305-bundler.js  x25519-chacha20poly1305-bundler_bg.js  x25519-chacha20poly1305-bundler_bg.wasm
pkg/nodejs/: package.json  x25519-chacha20poly1305-nodejs.js  x25519-chacha20poly1305-nodejs_bg.wasm
pkg/web/: LICENSE  package.json  x25519-chacha20poly1305-web.d.ts  x25519-chacha20poly1305-web.js  x25519-chacha20poly1305-web_bg.wasm  x25519-chacha20poly1305-web_bg.wasm.d.ts
src/: encrypt_only.rs  lib.rs
