[package]
name = "x25519-chacha20poly1305"
version = "0.2.0"
edition = "2021"
authors = ["John Sahhar <john@entropy.xyz>"]
license = "MIT OR Apache-2.0"
description = "x25519 & chacha20poly1305"
repository = "https://github.com/entropyxyz/x25519-chacha20poly1305"

[dependencies]
hex = "*"
bip39 = { git = "https://github.com/infincia/bip39-rs.git", tag = "v0.6.0-beta.1" }
wasm-bindgen = "0.2.83"
x25519-dalek = { version = "2.0.0", features = ["static_secrets"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
blake2 = "0.10.5"
chacha20poly1305 = "0.10.1"
sp-core = { version = "21.0.0", default-features = false, features = [
  "full_crypto",
  "serde",
] }
generic-array = "0.14.6"
rand_core = { version = "0.6.4", features = ["getrandom"] }
getrandom = { version = "0.2", features = ["js"] }
schnorrkel = { version = "0.9.1", default-features = false, features = [
  "std",
  "wasm-bindgen",
] }
js-sys = "0.3.64"
thiserror = "1.0.47"
zeroize = "1.5.7"

[dev-dependencies]
sp-keyring = "24.0.0"

[features]
unsafe = []

[lib]
crate-type = ["cdylib", "rlib"]
